
=item *

Fixed an issue when a user with publish permission selects "Check in and
Publish" for a newly created document. Reported by Chris Heiland and Matt Rolf
(RT #1261). [David]

=item *

When creating a new media document from a related media element, if the user
clicks "Save" or "Save and Stay" instead of "Create", it will properly create
the related media document. [David]

=back

=head1 VERSION 1.10.4 (2008-03-09)

=head2 Improvements

=over

=item *

Nicer use of the "Bricolage Instance Name" preference, now used on every page.
[Phillip Smith]

=item *

More German corrections. [Steffen Schwigon]

=item *

Documented the need to look at
L<Bric::Biz::Workflow::Parts::Desk|Bric::Biz::Workflow::Parts::Desk> in
L<Bric::Biz::Asset|Bric::Biz::Asset>'s C<set_desk_id()> method. [Greg Heo]

=item *

Fixed documentation of C<Bric::Biz::Element::Container>'s C<delete_elements>
method. [Bret Dawson]

=item *

Include meta-equiv tag in the header to set the charset to be UTF-8 if it is
the only charset loaded in C<$LOAD_CHAR_SETS>. Reported by Daisuke Maki. [Paul
Orrock]

=item *

Added C<--site> option to C<bric_republish>. Suggested by Chauncey Thorn. [David]

=item *

Updated autovacuum documentation in L<Bric::DBA|Bric::DBA>. [David]

=item *

The installer now also checks in F</usr/lib> for libraries, by way of searching
C<$Config{libpth}> as well as C<$Config{loclibpth}>. [Steffen Schwigon]

=item *

The C<publish_status> attribute can now be set in stories and media created
via SOAP. [David]

=item *

The code in code select fields can now access the
C<Bric::Biz::Element::Field|Bric::Biz::Element::Field> object itself using the
variable C<$field>. [Greg Heo]

=item *

When viewing elements when not checked out, whitespace is preserved for IE7,
FF2, and Safari 3, so that reading and copying code is easier.  Suggested by
Michael Herring. [Matt Rolf]

=back

=head2 Bug Fixes

=over

=item *
