@@ -182,7 +182,9 @@ sub save : Callback(priority => 6) {
     # Clear the state and send 'em home.
     $self->clear_my_state;
 
-    if ($return eq 'search') {
+    if (my $prev = get_state_data('_profile_return')) {
+        $self->return_to_other($prev);
+    } elsif ($return eq 'search') {
         my $url = $SEARCH_URL . $workflow_id . '/';
         $self->set_redirect($url);
     } elsif ($return eq 'active') {
@@ -287,8 +289,13 @@ sub checkin : Callback(priority => 6) {
 
         # Clear the state out, set redirect, and publish.
         $self->clear_my_state;
-        $self->set_redirect('/');
         $pub->publish;
+        if (my $prev = get_state_data('_profile_return')) {
+            $self->return_to_other($prev);
+        } else {
+            $self->set_redirect('/');
+        }
+
 
     } else {
         # Look up the selected desk.
@@ -320,7 +327,11 @@ sub checkin : Callback(priority => 6) {
 
         # Clear the state out and set redirect.
         $self->clear_my_state;
-        $self->set_redirect('/');
+        if (my $prev = get_state_data('_profile_return')) {
+            $self->return_to_other($prev);
+        } else {
+            $self->set_redirect('/');
+        }
     }
 }
 
@@ -409,7 +420,11 @@ sub cancel : Callback(priority => 6) {
         add_msg('Media "[_1]" check out canceled.', $media->get_title);
     }
     $self->clear_my_state;
-    $self->set_redirect("/");
+    if (my $prev = get_state_data('_profile_return')) {
+        $self->return_to_other($prev);
+    } else {
+        $self->set_redirect('/');
+    }
 }
 
 ################################################################################
@@ -443,7 +458,11 @@ sub return : Callback(priority => 6) {
 
         # Clear the state and send 'em home.
         $self->clear_my_state;
-        $self->set_redirect($url);
+        if (my $prev = get_state_data('_profile_return')) {
+            $self->return_to_other($prev);
+        } else {
+            $self->set_redirect($url);
+        }
     }
 }
 
